# Routers

./: .gitignore  .ruff.toml  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.jwks  README.md  agent-routers-architecture.html  docker-compose.yml  openapi.html  openapi.json  openapi.yaml  pyproject.toml  schema.sql  swagger_server.py  中台对外接口与Agent对接协议.md
agent_routers/: errors.py  main.py
agent_routers/adapters/: agent_repo.py  audit_repo.py  http_client.py  jwks.py  redis_quota.py  request_repo.py  rule_repo.py
agent_routers/api/: __init__.py  dependencies.py  routes_agents.py  routes_audit.py  routes_cancel.py  routes_forward.py  routes_health.py  routes_rules.py
agent_routers/config/: settings.py
agent_routers/middleware/: __init__.py  audit.py  jwt_auth.py  quota.py  request_id.py
agent_routers/models/: __init__.py  agent.py  audit.py  request.py  rule.py
agent_routers/obs/: __init__.py  logging.py
agent_routers/schemas/: __init__.py  agent.py  chat.py  route.py  rule.py
agent_routers/services/: __init__.py  coordination.py  forwarder.py  registry.py  routing.py  session_manager.py  signer.py
alembic/: env.py
alembic/versions/: 004_endpoint_mapping.py  005_operation_types.py  1f5dcd2c842f_replace_endpoint_id_with_endpoint_type.py  268bc936a8b4_add_request_tracking_table.py  3c621f9f723a_remove_agent_instances_add_base_url_to_.py  48764e08b1c4_add_agent_auth_fields.py  (+5 more)
diagrams/: gen_arch.py  gen_dataflow.py  gen_flowchart.py  gen_register_seq.py  gen_sequence.py
scripts/: dynamic_test.py  mock_jwks_server.py
tests/: conftest.py
(+57 files in other folders)
